# LangChain-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitkeep
examples/: basic_usage.py
src/: indexing.py  rag_chain.py  retrieval.py  utils.py
tests/: test_rag_chain.py
